--- a/src/main/resources/md/css/layouts/blog.css
+++ b/src/main/resources/md/css/layouts/blog.css
@@ -143,6 +143,10 @@ h3 {
     text-shadow: 0 1px 1px #333;
 }
 
+.post-list {
+    padding-left: inherit;
+}
+
 .footer {
     text-align: center;
     padding: 1em 0;
