--- a/src/main/resources/md/css/layouts/blog.css
+++ b/src/main/resources/md/css/layouts/blog.css
@@ -17,6 +17,16 @@ h3 {
     font-weight: 100;
 }
 
+.post p {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+.post ul {
+    margin-bottom: 0.4em;
+}
+
+
 /* LAYOUT CSS */
 .pure-img-responsive {
     max-width: 100%;
