--- a/src/main/resources/md/css/layouts/blog.css
+++ b/src/main/resources/md/css/layouts/blog.css
@@ -56,6 +56,17 @@ h3 {
    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
    margin-bottom: 1px;
 }
+.brand-title:hover {
+   cursor: pointer;
+}
+
+.nav-title {
+   color: #ff3c51;
+   font-size: 26px;
+   font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+   margin-bottom: 1px;
+   font-weight: normal;
+}
 
 .nav-list {
     margin: 0;
@@ -240,6 +251,9 @@ a.post-title-link:focus {
    width: 100%;
    height: 214px;
    margin-top: 25px;
+}
+.logo-box:hover {
+    cursor: pointer;
 }
 
 .more-link {
