--- a/src/main/resources/md/css/layouts/blog.css
+++ b/src/main/resources/md/css/layouts/blog.css
@@ -108,8 +108,11 @@ h3 {
     padding: 2em 1em 0;
 }
 
-.post {
+.posts {
     padding-bottom: 2em;
+}
+
+.post {
 }
 .post-title {
     font-size: 2em;
@@ -131,6 +134,9 @@ h3 {
     color: #999;
     font-size: 90%;
     margin: 0;
+}
+.post-img:hover {
+    cursor: pointer;
 }
 
 a.post-title-link {
