--- a/src/main/resources/md/css/layouts/blog.css
+++ b/src/main/resources/md/css/layouts/blog.css
@@ -40,8 +40,6 @@ h3 {
 .sidebar {
     background: #f0f0f0;
     color: #292929;
-    min-width: 340px;
-    max-width: 580px;
 }
 
 .sidebar-content {
@@ -49,8 +47,8 @@ h3 {
     display: flex;
     flex-direction: column;
     padding-left: 35px;
-    padding-right: 10px;
-    max-width: 480px;
+    padding-right: 20px;
+    margin-bottom: 20px;
 }
 
 .brand-title {
@@ -108,7 +106,12 @@ h3 {
 }
 
 .content {
-    padding: 2em 1em 0;
+    padding: 2em 3em 0;
+}
+@media screen and (min-width: 64em) {
+    .content {
+        margin-left: 5%;
+    }
 }
 
 .posts {
@@ -203,42 +206,6 @@ a.post-title-link:focus {
     background: none;
 }
 
-@media (min-width: 48em) {
-    .content-holder {
-        margin-left: 340px
-    }
-    .content {
-        padding: 2em 3em 0;
-        margin-left: 10%;
-    }
-
-    .sidebar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-    }
-    .sidebar-content {
-        text-align: left;
-    }
-}
-.custom-restricted-width {
-     /* To limit the menu width to the content of the menu: */
-     display: inline-block;
-     /* Or set the width explicitly: */
-     /* width: 10em; */
-     text-align: left;
-
-     /*
-     border: 2px solid rgb(96, 118, 130);
-     border-radius: 4px;
-     */
-
-     padding-bottom: 20px;
-     padding-left: 0px;
-     padding-right: 18px;
-     padding-top: 12px;
-}
-
 .toc ul {
     list-style-type: disc;
 }
@@ -293,4 +260,12 @@ a.next-page {
   margin-top: 25px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.gcse-search-wrapper {
+    max-width: 600px;
+}
+
+.patreon-wrapper {
+    padding-top: 8px;
 }
